rextranslation fixes